    ASCII.
    <https://github.com/jhy/jsoup/issues/1952>

  * Bugfix: in Jsoup.connect(url), the ConstrainableInputStream would clear Thread interrupts when reading the body.
    This precluded callers from spawning a thread, running a number of requests for a length of time, then joining that
    thread after interrupting it.
    <https://github.com/jhy/jsoup/issues/1991>

  * Change: removed previously deprecated methods Document#normalise, Element#forEach(org.jsoup.helper.Consumer<>),
    Node#forEach(org.jsoup.helper.Consumer<>), and the org.jsoup.helper.Consumer interface; the latter being a
    previously required compatibility shim prior to Android's de-sugaring support.

Release 1.16.1 [29-Apr-2023]
  * Improvement: in Jsoup.connect(url), natively support URLs with Unicode characters in the path or query string,
    without having to be escaped by the caller.
    <https://github.com/jhy/jsoup/issues/1914>

  * Improvement: Calling Node.remove() on a node with no parent is now a no-op, vs a validation error.
    <https://github.com/jhy/jsoup/issues/1898>

  * Bugfix: aligned the HTML Tree Builder processing steps for AfterBody and AfterAfterBody to the updated WHATWG
    standard, to not pop the stack to close <body> or <html> elements. This prevents an errant </html> closing preceding
    structure. Also added appropriate error message outputs in this case.
    <https://github.com/jhy/jsoup/issues/1851>

  * Bugfix: Corrected support for ruby elements (<ruby>, <rp>, <rt>, and <rtc>) to current spec.
    <https://github.com/jhy/jsoup/issues/1294>

  * Bugfix: When using Node.before(node) or Node.after(node), if the incoming node was a sibling of the context node,
    the incoming node may be inserted into the wrong relative location.
    <https://github.com/jhy/jsoup/issues/1898>

  * Bugfix: In Jsoup.connect(url), if the input URL had components that were already % escaped, they would be escaped
    again, causing errors when fetched.